# imsize

./: .gitignore  .pylintrc  .ruff.toml  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
imsize/: __init__.py  argv.py  consoleapp.py  exrhdr.py  imsize  imsize.py  jpeghdr.py  pfmhdr.py  pnghdr.py  pnm.py  pnmhdr.py
src/: consoleapp.py  imsize.py
test/: test_read.py  test_unicode_filenames.py
test/images/: 640x480_plain10.raw  640x480_plain12.raw  640x480_raw10.mipi  640x480_raw12.mipi  float16.npy  uint16.npy
test/images/orientations/: landscape_1.tif  landscape_2.tif  landscape_3.tif  landscape_4.tif  landscape_5.tif  landscape_6.tif  landscape_7.tif  landscape_8.tif  portrait_1.tif  portrait_2.tif  portrait_3.tif  portrait_4.tif  portrait_5.tif  portrait_6.tif  portrait_7.tif  portrait_8.tif
