[project]
name = "imsize"
version = "1.5.1"
description="Lightning-fast extraction of image dimensions & bit depth."
authors = [{name = "Tomi Aarnio", email = "tomi.p.aarnio@gmail.com"}]
readme = "README.md"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy >= 1.21.2",
  "piexif >= 1.1.3",
  "pyexiv2 >= 2.7.0",
  "rawpy >= 0.16.0"
]

[project.urls]
Homepage = "http://github.com/toaarnio/imsize"

[project.scripts]
imsize = "imsize.consoleapp:main"
