[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imsize"
description="Lightning-fast extraction of basic image metadata"
authors = [
  {name = "Tomi Aarnio", email = "tomi.p.aarnio@gmail.com"}
]
readme = "README.md"
requires-python = ">= 3.10"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy >= 2.2.0",
  "pyexiftool >= 0.5.6",
  "pyexiv2 >= 2.15.0",
  "rawpy >= 0.25.0",
  "sympy >= 1.14.0",
]

[tool.hatch.envs.default]
installer = "uv"

[project.urls]
Homepage = "http://github.com/toaarnio/imsize"

[project.scripts]
imsize = "imsize.consoleapp:main"

[tool.hatch.version]
path = "imsize/version.py"

[tool.hatch.build]
include = ["imsize"]
exclude = ["*test*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--tb=short"
